# earthkit-time

./: .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: ci-hpc-config.yml
.github/workflows/: ci.yml
docs/: conf.py  index.rst
docs/api/: calendar.rst  climatology.rst  index.rst  sequence.rst  timesteps.rst
docs/cli/: climdates.rst  date.rst  dateseq.rst  datetime.rst  index.rst
docs/guide/: api.rst  cli.rst  index.rst
src/earthkit/dates/: __init__.py  calendar.py  climatology.py  sequence.py
src/earthkit/dates/cli/: actions.py  cliargs.py  climatology.py  sequence.py
src/earthkit/dates/data/: __init__.py
src/earthkit/time/: __init__.py  calendar.py  climatology.py  sequence.py  timesteps.py  utilities.py
src/earthkit/time/cli/: cliargs.py  climatology.py  cliout.py  date.py  datetime.py  sequence.py
src/earthkit/time/data/: __init__.py
src/earthkit/time/data/sequences/: ecmwf-2days.yaml  ecmwf-4days.yaml  ecmwf-mon-thu.yaml
src/earthkit/time/utils/: dates.py  grib.py
tests/: test_calendar.py  test_climatology.py  test_data.py  test_dates.py  test_grib.py  test_sequence.py  test_timesteps.py  test_utilities.py
tests/cli/: test_cliargs.py  test_climatology_cli.py  test_cliout.py  test_date_cli.py  test_datetime_cli.py  test_sequence_cli.py
