[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earthkit-dates"
version = "0.0.1"
requires-python = ">= 3.8"
description = "Date manipulation routines for the use of weather data"
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]

[tool.isort]
profile = "black"

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules"
testpaths = [
    "src",
    "tests",
]

[tool.setuptools.packages.find]
where = ["src"]
